--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="../todolist-test/image/icon/fontawesome-free-5.13.0-web/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/all.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+	<link href="../todolist-test/image/icon/fontawesome-free-5.13.0-web/css/all.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./css/all.css">
+	<script src="./js/vue.js"></script>
 </head>
 <body>
-    <div class="wrap">
-        <div class="container">
-            <form action="">
-                <button class="send"><i class="far fa-save"></i></button>
-                <input type="text" class="text" placeholder="請輸入代辦事項...">
-            </form>
-            <ul class="list"></ul>
-        </div>
-    </div>
-    <script src="./js/all.js"></script>
+	<div id="app">
+		<div class="container">
+				<h1 class="text-center mb-4">To Do List</h1>
+				<div class="row-sm input-group pb-4">
+					<input class="form-control" type="text" v-model="newTodo" @keyup.enter="addTodoData" placeholder="準備要做的任務">
+					<button class="btn btn-outline-secondary" type="button" @click="addTodoData">新增</button>
+				</div>
+
+				<div class="sort text-center">
+					<div class="sort-header">
+						<ul class="nav">
+							<li class="nav-item">
+								<a class="nav-link" :class="{'sort-all': visibility == 'all'}" @click="visibility = 'all'" href="#">全部</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" :class="{'sort-active': visibility == 'active'}" @click="visibility = 'active'" href="#">進行中</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" :class="{'sort-completed': visibility == 'completed'}" @click="visibility = 'completed'" href="#">已完成</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+	
+				<div class="list" :class="listColor">
+					<ul class="list-group list-group-flush text-left">
+						<list v-for="(item, index) in filteredTodo" :key="index" :list-data="item" @event="removeTodoData"></list>
+					</ul>
+				</div>
+
+		</div>
+	</div>
+	<script src="./js/all.js"></script>
 </body>
 </html>
